--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node server/index.js"
+    "start": "babel-node server/index.js",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,8 @@
     "@babel/preset-react": "^7.16.0",
     "@vitejs/plugin-react": "^1.1.3",
     "babel-loader": "^8.2.3",
-    "vite": "^2.7.2"
+    "vite": "^2.7.2",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1"
   }
 }
