--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "babel-node server/index.js",
-    "build": "webpack"
+    "webpackBuild": "webpack",
+    "serve": "cross-env NODE_ENV=production babel-node server",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "vite build --outDir dist/client",
+    "build:server": "vite build --ssr server/entry-server.jsx --outDir dist/server"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +29,7 @@
     "babel-loader": "^8.2.3",
     "vite": "^2.7.2",
     "webpack": "^5.64.4",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "cross-env": "^7.0.3"
   }
 }
